# bounded-integer

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
bounded-integer-macro/: Cargo.toml
bounded-integer-macro/src/: lib.rs
bounded-integer/src/: lib.rs
macro/: Cargo.toml
macro/src/: generate.rs  lib.rs
optimization-tests/: Cargo.toml
optimization-tests/src/: lib.rs
src/: examples.rs  lib.rs  macro.rs  parse.rs  prim_int.rs  types.rs  unsafe_api.rs
src/types/: indexing.rs  mod.rs
tests/: force_build.rs  hygiene.rs
ui/: bad_range.rs  bad_range.stderr  const_new.rs  const_new.stderr  macro.rs  macro.stderr  not_zeroable.rs  not_zeroable.stderr
