[package]
name = "bounded-integer"
version = "0.5.0"
authors = ["Kestrer <kestrer.dev@gmail.com>"]
description = "Bounded integers"
keywords = ["bounded", "integer", "macro", "refinement"]
license = "ISC"
repository = "https://github.com/Kestrer/bounded-integer"
readme = "README.md"
edition = "2018"

[dependencies]
bounded-integer-macro = { path = "./macro", version = "=0.5.0", optional = true }

arbitrary = { version = "1.0.2", optional = true }
bytemuck = { version = "1.7.2", optional = true }
serde = { version = "1.0.124", default-features = false, optional = true }
zerocopy = { version = "0.6", optional = true }

[features]
std = []

types = []

macro = ["bounded-integer-macro"]
__examples = ["macro", "bounded-integer-macro/generate_tests"]

step_trait = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[workspace]
members = ["macro"]
