[package]
name = "bounded-integer"
version = "0.5.0"
authors = ["Kestrer <kestrer.dev@gmail.com>"]
description = "Bounded integers"
keywords = ["bounded", "integer", "macro", "refinement"]
license = "ISC"
repository = "https://github.com/Kestrer/bounded-integer"
readme = "README.md"
edition = "2021"

[dependencies]
bounded-integer-macro = { path = "./macro", version = "=0.5.0", optional = true }

arbitrary1 = { package = "arbitrary", version = "1.0.2", optional = true }
bytemuck1 = { package = "bytemuck", version = "1.7.2", optional = true }
num-traits02 = { package = "num-traits", version = "0.2.14", default-features = false, optional = true }
serde1 = { package = "serde", version = "1.0.124", default-features = false, optional = true }
zerocopy06 = { package = "zerocopy", version = "0.6", optional = true }

[features]
std = []

types = []

macro = ["bounded-integer-macro"]
__examples = ["macro", "bounded-integer-macro/generate_tests"]

step_trait = []

serde = ["serde1"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[workspace]
members = ["macro"]
