[package]
name = "bounded-integer"
version = "0.6.0"
description = "Bounded integers"
keywords = ["bounded", "integer", "macro", "refinement", "modular"]
license = "ISC"
repository = "https://github.com/Kestrer/bounded-integer"
readme = "README.md"
edition = "2024"

[dependencies]
bounded-integer-macro = { path = "./macro", version = "=0.6.0", optional = true }

arbitrary1 = { package = "arbitrary", version = "1.0.2", optional = true }
bytemuck1 = { package = "bytemuck", version = "1.7.2", optional = true }
num-traits02 = { package = "num-traits", version = "0.2.14", default-features = false, features = ["i128"], optional = true }
serde1 = { package = "serde", version = "1.0.124", default-features = false, optional = true }
zerocopy = { version = "0.8.14", features = ["derive"], optional = true }

[features]
std = ["alloc"]
alloc = []

macro = ["bounded-integer-macro"]

step_trait = []

# `__doc` is set when building the crate locally, but users should not set it.
# There are a few reasons we use it instead of `cfg(doc)`:
# + The examples are gated based on this feature, and we want them to typecheck.
# + When it is enabled, we adjust the internals of the crate in a way that makes its macros unusable
#   outside the crate. This improves documentation, but should not be done only when `cfg(doc)` is
#   set.
__doc = ["macro"]

[dev-dependencies]
trybuild = "1.0.110"

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["macro"]
