[package]
name = "bounded-integer-macro"
version = "0.2.0"
authors = ["Koxiaet <38139193+Koxiaet@users.noreply.github.com>"]
description = "Bounded integers proc macro"
keywords = ["bounded", "integer", "macro", "refinement"]
license = "ISC"
repository = "https://github.com/Koxiaet/bounded-integer"
readme = "../README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.18"
syn = { version = "1.0.30", features = ["full"] }
quote = "1.0.6"
