[package]
name = "bounded-integer-macro"
version = "0.3.0"
authors = ["Koxiaet <38139193+Koxiaet@users.noreply.github.com>"]
description = "Bounded integers proc macro"
keywords = ["bounded", "integer", "macro", "refinement"]
license = "ISC"
repository = "https://github.com/Koxiaet/bounded-integer"
readme = "../README.md"
edition = "2018"

[lib]
proc-macro = true

[features]
serde = []
step_trait = []

[dependencies]
proc-macro2 = "1.0.24"
syn = { version = "1.0.52", features = ["proc-macro", "parsing", "printing", "full"], default-features = false }
quote = "1.0.7"
num-bigint = "0.3.1"
