[package]
name = "bounded-integer-macro"
version = "0.5.8"
description = "Proc macro for `bounded-integer`. Do not use directly."
keywords = ["bounded", "integer", "macro", "refinement"]
license = "ISC"
repository = "https://github.com/Kestrer/bounded-integer"
readme = "../README.md"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.9"
